--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -85,7 +85,7 @@
        "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
        "      <th>Sibsp</th>\n",
-       "      <th>Parch</th>\n",
+       "      <th>ParentsORChildren</th>\n",
        "      <th>Ticket</th>\n",
        "      <th>Fare</th>\n",
        "      <th>Cabin</th>\n",
@@ -283,32 +283,32 @@
        "8      1         1    Appleton, Mrs. Edward Dale (Charlotte Lamson)  female   \n",
        "9      1         0                          Artagaveytia, Mr. Ramon    male   \n",
        "\n",
-       "     Age  Sibsp  Parch    Ticket      Fare    Cabin Embarked Boat   Body  \\\n",
-       "0  29.00      0      0     24160  211.3375       B5        S    2    NaN   \n",
-       "1   0.92      1      2    113781  151.5500  C22 C26        S   11    NaN   \n",
-       "2   2.00      1      2    113781  151.5500  C22 C26        S  NaN    NaN   \n",
-       "3  30.00      1      2    113781  151.5500  C22 C26        S  NaN  135.0   \n",
-       "4  25.00      1      2    113781  151.5500  C22 C26        S  NaN    NaN   \n",
-       "5  48.00      0      0     19952   26.5500      E12        S    3    NaN   \n",
-       "6  63.00      1      0     13502   77.9583       D7        S   10    NaN   \n",
-       "7  39.00      0      0    112050    0.0000      A36        S  NaN    NaN   \n",
-       "8  53.00      2      0     11769   51.4792     C101        S    D    NaN   \n",
-       "9  71.00      0      0  PC 17609   49.5042      NaN        C  NaN   22.0   \n",
+       "     Age  Sibsp  ParentsORChildren    Ticket      Fare    Cabin Embarked Boat  \\\n",
+       "0  29.00      0                  0     24160  211.3375       B5        S    2   \n",
+       "1   0.92      1                  2    113781  151.5500  C22 C26        S   11   \n",
+       "2   2.00      1                  2    113781  151.5500  C22 C26        S  NaN   \n",
+       "3  30.00      1                  2    113781  151.5500  C22 C26        S  NaN   \n",
+       "4  25.00      1                  2    113781  151.5500  C22 C26        S  NaN   \n",
+       "5  48.00      0                  0     19952   26.5500      E12        S    3   \n",
+       "6  63.00      1                  0     13502   77.9583       D7        S   10   \n",
+       "7  39.00      0                  0    112050    0.0000      A36        S  NaN   \n",
+       "8  53.00      2                  0     11769   51.4792     C101        S    D   \n",
+       "9  71.00      0                  0  PC 17609   49.5042      NaN        C  NaN   \n",
        "\n",
-       "                          HomeDest  \n",
-       "0                     St Louis, MO  \n",
-       "1  Montreal, PQ / Chesterville, ON  \n",
-       "2  Montreal, PQ / Chesterville, ON  \n",
-       "3  Montreal, PQ / Chesterville, ON  \n",
-       "4  Montreal, PQ / Chesterville, ON  \n",
-       "5                     New York, NY  \n",
-       "6                       Hudson, NY  \n",
-       "7                      Belfast, NI  \n",
-       "8              Bayside, Queens, NY  \n",
-       "9              Montevideo, Uruguay  "
+       "    Body                         HomeDest  \n",
+       "0    NaN                     St Louis, MO  \n",
+       "1    NaN  Montreal, PQ / Chesterville, ON  \n",
+       "2    NaN  Montreal, PQ / Chesterville, ON  \n",
+       "3  135.0  Montreal, PQ / Chesterville, ON  \n",
+       "4    NaN  Montreal, PQ / Chesterville, ON  \n",
+       "5    NaN                     New York, NY  \n",
+       "6    NaN                       Hudson, NY  \n",
+       "7    NaN                      Belfast, NI  \n",
+       "8    NaN              Bayside, Queens, NY  \n",
+       "9   22.0              Montevideo, Uruguay  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read in CSV file to a DataFrame object\n",
-    "df = pd.read_csv(\"titanic.csv\")\n",
+    "df = pd.read_csv(\"datasets/titanic.csv\")\n",
     "# Display first 10 rows\n",
     "df.head(10)"
    ]
