--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -872,8 +872,7 @@
     }
    ],
    "source": [
-    "#dframe = pd.read_csv(\"datasets/failedbanks.csv\")\n",
-    "dframe = pd.read_csv(\"https://www.fdic.gov/bank/individual/failed/banklist.csv\")\n",
+    "dframe = pd.read_csv(\"datasets/failedbanks.csv\")\n",
     "# Displays last 5 rows by default\n",
     "dframe.tail()"
    ]
